[package]

name = "fs_handler_wasi"
version = "0.1.0"
edition = "2024"

[dependencies]

commun_utils_handler = {path = "../communUtilsHandler/"}
deriveUtils = {path = "../communUtilsHandler/deriveUtils/"}
regex = "1.12.3"
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[lib]

crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[package.metadata.component]

package = "component:fs-handler-wasi"

[package.metadata.component.dependencies]
