[package]
    name = "virtualFile"
    version = "0.1.0"
    edition = "2024"
[dependencies]
    tokio = {version = "^1.52.3", default-features = false, features = [
        "fs",
        "io-std",
        "sync",
        "net"
    ]}
    tokio-tungstenite = { version = "0.23.1", default-features = false, features = [
        "connect",
        "handshake"
    ] }
    futures = "0.3.30"
    wasmtime = { version = "38.0.4",default-features = false, features = [
        "runtime",
        "cranelift",
        "component-model",
    ]}
    wasmtime-wasi = "38.0.4"
    commun_utils_handler = {path = "../communUtilsHandler/"}
    derive_utils = {path = "../communUtilsHandler/derive_utils/"}
    lazy_static = "1.5.0"
    serde = {version = "1.0.228", default-features = false, features = ["derive"]}
    serde_json = {version = "1.0.148", default-features = false, features = ["std"]}
    time = "0.3.47"
    colored = "3.1.1"
    regex = "1.12.3"
    blake3 = { version = "1.8.5", optional = true }
    zstd = "0.13.3"
mongodb = "3.7.0"

[features]
    client = []
    deamon = ["blake3"]
    blake3 = ["dep:blake3"]

